--- a/.drone.yml
+++ b/.drone.yml
@@ -7,4 +7,4 @@ steps:
     settings:
       registry: docker.lab71.net:5000
       insecure: true
-      repo: docker.lab71.net:5000/gcc-clang
+      repo: docker.lab71.net:5000/maxalex/gcc-clang
